--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
   <p>А еще кошек мейн-кунов относят к классу питомцев-компаньонов. Причем с характером собаки. Поэтому не удивляйтесь, если животное захочет поиграть в апорт или проявит интерес к купанию в ванне или прогулкам на шлейке. Как и все компаньоны, куны не отходят от хозяев ни на шаг. Но по-настоящему верны только тому, кого выберут в качестве вожака. Обычно это человек, который проводит с кошкой больше времени и следит за ее питанием. В некоторых случаях им может стать даже ребенок.
      </p>
-
+  <img src="images/121.jpg">
 
 <h2>Ключевые качества</h2>
 
@@ -23,7 +23,7 @@
 <p><b>– Высокий интеллект.</b> Кошки породы мейн-кун регулярно попадают в рейтинги самых умных представителей семейства кошачьих. Животные обладают хорошей памятью и легко поддаются дрессировке. Например, быстро запоминают базовые команды из общего курса дрессировки для собак, могут ходить в туалет на унитаз или выключать свет в комнате.</p>
 
 <p><b>– Позднее взросление.</b> Мейн-кун сохраняет живой интерес к подвижным играм и ведет себя как котенок до трех лет. После – приобретает степенность взрослой кошки, предпочитающей наблюдать за происходящим со стороны.</p>
-
+<img src="images/122.jpg">
     </main>      
     </body>
     </html>
